Package: R.rsp
==============

Version: 0.43.0-9000 [2019-02-05]

DEPRECATED AND DEFUNCT:

 * Package 'ascii' is no longer suggested to avoid R CMD check WARNINGs because
   'ascii' was "removed" from CRAN (it has been archieved).  AsciiDoc documents
   can still be processed if you install 'ascii' by other means.
 

Version: 0.43.0 [2018-08-25]

BUG FIXES:

 * Forgot to declare a few S3 methods in the NAMESPACE.
 
DEPRECATED AND DEFUNCT:

 * Deprecated write() for RspResponse is now defunct - use writeResponse().


Version: 0.42.0 [2018-01-09]

SIGNIFICANT CHANGES:

 * Now importing 'digest' (used to be a suggested package).

BUG FIXES:

 * Package failed to install under _R_CHECK_DEPENDS_ONLY_=true and 'digest'
   not being installed. Now importing 'digest'.

DEPRECATED AND DEFUNCT:

 * Deprecated write() for RspResponse - use writeResponse() instead.

 * Replaced parse() with parseDocument(), parseCode(), parseDirectory(),
   and parseExpression().


Version: 0.41.0 [2017-04-15]

BUG FIXES:

 * WORKAROUND: If the generated RSP output contains invalid characters in the
   current encoding and is longer than 10,000 characters, it may result in an
   infinite loop of warnings generated by base::cat() (at least on Linux).
   This is now detected and writeBin() is used as fallback for outputting.
   For details, see R-devel thread
   https://stat.ethz.ch/pipermail/r-devel/2017-January/073571.html.

 * RspRSourceCodeFactory did not preserve '\unnnn' encoded UTF-8 characters
   (they where turned into "<U+NNNN>" strings).

 * rcode() would sometimes return NULL.

 * When used on *.html.rsp vignettes, vignette engine R.rsp::rsp would delete
   the generated *.html immediately after being produced.
 
DEPRECATED AND DEFUNCT:

  * Removed defunct methods that were part of the legacy API.
  
  * Attribute 'verbatim' for RSP 'include' preprocessing directives is defunct.
    Use attribute 'type' instead.


Version: 0.40.0 [2016-12-05]

SIGNIFICANT CHANGES:
